force-app/main/default/objects/Credit_Request__c/Credit_Request__c.object-meta.xml
<CustomObject>
    <label>Credit Request</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Credit Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>