force-app/main/default/objects/Credit_Request__c/fields/Comparison_Date__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Date__c</fullName>
    <label>Comparison Date</label>
    <type>Date</type>
</CustomField>