force-app/main/default/objects/Credit_Request__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract ID</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Debt_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>