force-app/main/default/objects/Credit_Request__c/fields/Credit_Term1__c.field-meta.xml
<CustomField>
    <fullName>Credit_Term1__c</fullName>
    <label>Credit Term</label>
    <type>Date</type>
</CustomField>