force-app/main/default/objects/Credit_Request__c/fields/Credit_Term__c.field-meta.xml
<CustomField>
    <fullName>Credit_Term__c</fullName>
    <label>Credit Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>