force-app/main/default/objects/Credit_Request__c/fields/CreditCurrency__c.field-meta.xml
<CustomField>
    <fullName>CreditCurrency__c</fullName>
    <label>Credit Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>