force-app/main/default/objects/Credit_Request__c/fields/Debt_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Debt_Request_ID__c</fullName>
    <displayFormat>DR-{000000}</displayFormat>
    <label>Debt Request ID</label>
    <type>AutoNumber</type>
</CustomField>