force-app/main/default/objects/Credit_Request__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote ID</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Credit Requests</relationshipLabel>
    <relationshipName>Credit_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>