force-app/main/default/objects/Credit_Request__c/fields/Quote_route__c.field-meta.xml
<CustomField>
    <fullName>Quote_route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote route</label>
    <referenceTo>Quote_route__c</referenceTo>
    <relationshipName>Debt_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>