force-app/main/default/objects/Credit_Request__c/fields/Request_to_issue_Tax_invoice__c.field-meta.xml
<CustomField>
    <fullName>Request_to_issue_Tax_invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request to issue Tax invoice</label>
    <type>Checkbox</type>
</CustomField>