force-app/main/default/objects/Credit_Request__c/fields/Requester_Company__c.field-meta.xml
<CustomField>
    <fullName>Requester_Company__c</fullName>
    <formula>Quote_ID__r.RequesterCompany__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Company</label>
    <type>Text</type>
</CustomField>