force-app/main/default/objects/Credit_Request__c/fields/RequesttoissueTaxinvoice__c.field-meta.xml
<CustomField>
    <fullName>RequesttoissueTaxinvoice__c</fullName>
    <label>Request to issue Tax invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TRUE_FALSE</valueSetName>
    </valueSet>
</CustomField>