force-app/main/default/objects/Credit_Request__c/fields/Selling_rate_Profit_net__c.field-meta.xml
<CustomField>
    <fullName>Selling_rate_Profit_net__c</fullName>
    <label>Selling rate / Profit (net)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>