force-app/main/default/objects/Credit_Request__c/fields/SI__c.field-meta.xml
<CustomField>
    <fullName>SI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SI</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipName>Debt_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>