force-app/main/default/objects/Credit_Request__c/fields/SOA_Settlement_Day__c.field-meta.xml
<CustomField>
    <fullName>SOA_Settlement_Day__c</fullName>
    <label>SOA Settlement Day</label>
    <type>Date</type>
</CustomField>