force-app/main/default/objects/Credit_Request__c/fields/Who_pay_the_freight__c.field-meta.xml
<CustomField>
    <fullName>Who_pay_the_freight__c</fullName>
    <label>Who pay the freight?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>