force-app/main/default/objects/Credit_Request__c/fields/Whopaythefreight__c.field-meta.xml
<CustomField>
    <fullName>Whopaythefreight__c</fullName>
    <label>Who pay the freight?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TCL</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>