force-app/main/default/objects/Credit_Request__c/recordTypes/Master1.recordType-meta.xml
<RecordType>
    <fullName>Master1</fullName>
    <active>true</active>
    <label>Master</label>
</RecordType>